--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -1,17 +1,28 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
+
 <html>
 
 <head>
-	<meta charset="UTF-8" />
-	<title>Pro MERN Stack</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-	<link rel="stylesheet" href="./css/main.css">
+  <title>Inventory Management System</title>
+
+  <!-- Google font - Roboto -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
+
+  <!-- Styling css files -->
+  <link rel="stylesheet" href="css/common.css">
+  <link rel="stylesheet" href="css/app.css">
 </head>
 
 <body>
-	<div id="root"></div>
-	<script src="./env.js"></script>
-	<script src="./app.bundle.js" type="module"></script>
+  <div id="contents"></div>
+
+  <script src="/env.js"></script>
+  <script src="/vendor.bundle.js"></script>
+  <script src="/app.bundle.js"></script>
 </body>
 
 </html>
